add delete and toggle switch

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 		</div>
 		<!-- Buttons -->
 		<div class="calculator-buttons">
+			<button class="delete" id="del-btn">DEL</button>
+			<label class="switch">
+  				<input type="checkbox">
+  				<span class="slider round"></span>
+			</label>
+			
 			<button class="operator" value="+">+</button>
 			<button class="operator" value="-">-</button>
 			<button class="operator" value="*">×</button>
